reworked manhattan distance to support super-fast processing via pre-computing distances